src/test/test-models/good/parser-generator/prim_var_data_block.stan
data {
  int<lower=0, upper=1> p1;
  real p2;
  int ar_p1[3];
  real<lower=0, upper=1> ar_p2[4];
}
