src/test/test-models/bad/err-decl-matrix-2.stan
data {
  real<lower=3[3]> y;
}
model {
}
